Fix result auth
